Restructure data folder
- Data folder will contain subdirs for each schema and csv files inside them

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ name: container-validation-db
 services:
   app:
     profiles:
-      - install
+      - init
     build: .
     volumes:
       - .:/app
