--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "container-validation-db",
+  "name": "localize-mssql",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "directories": {
@@ -14,6 +15,7 @@
     "start": "docker compose --profile init up -d --build --force-recreate"
   },
   "dependencies": {
+    "chalk": "^5.4.1",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "mssql": "^9.1.1"
